--- a/love.html
+++ b/love.html
@@ -70,7 +70,7 @@
   </div>
 
   <div class="content">
-    <img src="boy gif.gif" class="gif" alt="Love GIF">
+    <img src="boy.gif" class="gif" alt="Love GIF">
     <h1>LOVE YOU TOO 😘🥰</h1>
     <p>Note: This content is only for fun.<br><em>Tomal Bhattacharjoo</em></p>
   </div>
